--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     }
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.17.12",
     "@babel/preset-react": "^7.13.13",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "browserslist": "^4.21.0",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
